[tool.poetry]
name = "valet-parking-slack-bot"
version = "0.1.0"
description = "Backend HTTP server for Slack bot"
authors = ["Olga and Shay Nehmad <dontemailus@ever.com>"]
license = "Apache 2"

[tool.poetry.dependencies]
python = "^3.9"
slack-bolt = "^1.9.1"
Flask = "^2.0.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
flake8 = "^3.9.2"
black = "^21.7b0"
flake8-bugbear = "^21.4.3"
bandit = "^1.7.0"

# From https://stackoverflow.com/questions/4673373/logging-within-pytest-tests
[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
